// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Card > renders correctly with a leading icon 1`] = `
<div>
  <div
    class="sc-bRKDuR bHjpxP sc-jwTyAe hjnNOi"
  >
    <div
      class="sc-bRKDuR cRGbbj"
    >
      <div
        class="sc-bRKDuR pJiNb"
      >
        <div
          class="sc-bRKDuR hUwRKL"
        >
          <span
            class="sc-bRKDuR cNXuge sc-fhHczv XmxEI"
            color="liquorice"
            data-testid="info-container"
            rotate="0"
            size="24"
          >
            <svg
              fill="none"
              height="100%"
              viewBox="0 0 24 24"
              width="100%"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M12 0C5.383 0 0 5.383 0 12s5.383 12 12 12 12-5.383 12-12S18.617 0 12 0zm-1 6.99a1 1 0 112 0c0 .553-.447 1.005-1 1.005-.553 0-1-.442-1-.995v-.01zM11 11a1 1 0 112 0v7a1 1 0 11-2 0v-7zm-9 1c0 5.514 4.486 10 10 10s10-4.486 10-10S17.514 2 12 2 2 6.486 2 12z"
                fill="currentColor"
                fill-rule="evenodd"
              />
            </svg>
          </span>
          <div
            class="sc-bRKDuR bHjpxP"
          >
            <p
              class="sc-bRKDuR bHjpxP sc-dTvVRJ jMSukC"
              cursor="inherit"
              title=""
            >
              Card Title
            </p>
          </div>
        </div>
      </div>
      <div
        class="sc-bRKDuR drfqDG"
      />
    </div>
  </div>
</div>
`;

exports[`Card > renders correctly with a visual 1`] = `
<div>
  <div
    class="sc-bRKDuR bHjpxP sc-jwTyAe hzFEh"
  >
    <div
      class="sc-bRKDuR bHjpxP sc-jJLAfE ixsXVo"
    >
      <div
        class="sc-bRKDuR bHjpxP sc-hwkwBN kdnwPq"
      />
    </div>
    <div
      class="sc-bRKDuR gHyHhE"
    >
      <div
        class="sc-bRKDuR pJiNb"
      >
        <div
          class="sc-bRKDuR hUwRKL"
        >
          <div
            class="sc-bRKDuR bHjpxP"
          >
            <p
              class="sc-bRKDuR bHjpxP sc-dTvVRJ jMSukC"
              cursor="inherit"
              title=""
            >
              Card Title
            </p>
          </div>
        </div>
      </div>
      <div
        class="sc-bRKDuR drfqDG"
      />
    </div>
  </div>
</div>
`;

exports[`Card > renders correctly with action button 1`] = `
<div>
  <div
    class="sc-bRKDuR bHjpxP sc-jwTyAe hjnNOi"
  >
    <div
      class="sc-bRKDuR cRGbbj"
    >
      <div
        class="sc-bRKDuR pJiNb"
      >
        <div
          class="sc-bRKDuR hUwRKL"
        >
          <div
            class="sc-bRKDuR bHjpxP"
          >
            <p
              class="sc-bRKDuR bHjpxP sc-dTvVRJ jMSukC"
              cursor="inherit"
              title=""
            >
              Card Title
            </p>
          </div>
        </div>
      </div>
      <div
        class="sc-bRKDuR drfqDG"
      />
      <div
        class="sc-bRKDuR bozFCt"
      >
        <button
          class="sc-bRKDuR bHjpxP sc-kcLKEh kxEBcb"
        >
          <div
            class="sc-kvnevz bNTvaC"
          >
            <div
              class="sc-kCuUfV eQEbcv childrenContainer"
            >
              Action
            </div>
          </div>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Card > renders correctly with fallback style 1`] = `
<div>
  <div
    class="sc-bRKDuR bHjpxP sc-jwTyAe KWyJy"
  >
    <div
      class="sc-bRKDuR cRGbbj"
    >
      <div
        class="sc-bRKDuR pJiNb"
      >
        <div
          class="sc-bRKDuR hUwRKL"
        >
          <div
            class="sc-bRKDuR bHjpxP"
          >
            <p
              class="sc-bRKDuR bHjpxP sc-dTvVRJ jMSukC"
              cursor="inherit"
              title=""
            >
              Card Title
            </p>
          </div>
        </div>
      </div>
      <div
        class="sc-bRKDuR drfqDG"
      />
    </div>
  </div>
</div>
`;

exports[`Card > renders correctly with title and body 1`] = `
<div>
  <div
    class="sc-bRKDuR bHjpxP sc-jwTyAe hjnNOi"
  >
    <div
      class="sc-bRKDuR cRGbbj"
    >
      <div
        class="sc-bRKDuR pJiNb"
      >
        <div
          class="sc-bRKDuR hUwRKL"
        >
          <div
            class="sc-bRKDuR bHjpxP"
          >
            <p
              class="sc-bRKDuR bHjpxP sc-dTvVRJ jMSukC"
              cursor="inherit"
              title=""
            >
              Card Title
            </p>
            <p
              class="sc-bRKDuR bHjpxP sc-dTvVRJ cXtlSP"
              cursor="inherit"
              title=""
            >
              This is the card body.
            </p>
          </div>
        </div>
      </div>
      <div
        class="sc-bRKDuR drfqDG"
      />
    </div>
  </div>
</div>
`;
